--- a/HotelApp/HotelApp/appsettings.json
+++ b/HotelApp/HotelApp/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=SACHI_FERNANDO1\\SQLEXPRESS;Database=HotelDb;User Id=sa;Password=sa;TrustServerCertificate=true"
     }
-  },
-  "AllowedHosts": "*"
-}
