--- a/HotelApp/HotelApp/appsettings.json
+++ b/HotelApp/HotelApp/appsettings.json
@@ -7,5 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=SACHI_FERNANDO1\\SQLEXPRESS;Database=HotelDb;User Id=sa;Password=sa;TrustServerCertificate=true"
+        "DefaultConnection": "Server=SACHI_FERNANDO1\\SQLEXPRESS;Database=HotelDb;Trusted_Connection=True;TrustServerCertificate=true"
     }
+}
